--- a/gb/23/4/20/n13977420.md
+++ b/gb/23/4/20/n13977420.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>16年照顾14位寄养童 林进财伉俪 获全国绩优寄养家庭</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/04/id13977421-610453-600x400.jpg" />
-<h6>寄养童给寄养妈妈一个大大的亲吻，感谢寄养妈妈的照顾。（云林家扶提供）
-</h6>
+<h6>寄养童给寄养妈妈一个大大的亲吻，感谢寄养妈妈的照顾。（云林家扶提供）</h6>
 <hr>
 <p>【大纪元2023年04月20日讯】（大纪元记者廖素贞台湾云林报导）?云林家扶的寄养家庭林进财、张惠钗伉俪，16年来，不辞辛劳照顾了14位寄养童，将于本周日接受卫福部全国绩优寄养家庭表扬，52年次，憨厚老实的林爸爸说：只是把孩子照顾好而已。而56年次寄养妈妈惠钗也直言就是给寄养童一个温暖的窝，有人照顾有人疼，关心他的健康，让寄养童平安长大而已。</p>
 <p>云林家扶督导林珊宇表示，林进财夫妇16年来照顾无数的寄养儿少。善良的惠钗妈妈民国96年时，无意中在电视上看见一则虐童事件，让她非常的不舍，当年就加入云林家扶寄养行列，十几年来共照顾过14位寄养儿童少年，其中有返回亲生家庭、有出养、有到机构的。</p>
@@ -16,39 +15,33 @@
 <p>寄养惠钗妈妈表示，感谢云林家扶的社工，能随时提供支持与协助，那怕是半夜，一路走来有云林家扶不断的课程教导，提供营养、安全、育儿技能及了解特殊儿童照顾、儿童权利公约等法令知识，让寄养家庭能不断充电与学习，我们才有足够的能量守护好寄养儿！</p>
 <p>责任编辑：郑桦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/21/n13870192.md#1">嘉义地区寄养家庭授证典礼 让爱得以延续</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/14/n13906891.md#1">安置家庭授证表扬 谢国梁感谢寄养家庭付出</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/11/n13927538.md#1">苗栗县寄养家庭授证 资深表扬典礼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/11/n13927560.md#1">云林招募寄养家庭 呼吁民众踊跃加入守护行列</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/5/n13943292.md#1">张善政感谢寄养家庭 盼更多家庭守护弱势儿少</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/24/n14444011.md#1">云林招募寄养家庭  呼吁乡亲打开家门让爱住进来</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/23/n14443793.md#1">阿里山森林游乐区 迎接林铁复驶后首个花季</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/23/n14443723.md#1">大雅路一段与北园国中小 通学步道即将完工</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/22/n14443204.md#1">纸风车台湾幻想曲  嘉义孩子学到永续的精神</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/22/n14443198.md#1">文化路夜市 交通管制下午6时起试办至4月底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/19/n9970937.md#1" target="_blank">严家伟：访“共产主义接班人”的集体大坟场</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11488843.md#1" target="_blank">34国法轮功学员欧洲集会游行 英议员声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/6/n11238642.md#1" target="_blank">晓明：文革中广西204地质勘探队惨绝人寰的凶杀案</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/16/n11262924.md#1" target="_blank">参加纽约大集会 意大利小伙子找到人生意义</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/16/n14438505.md#1">无心当皇帝的庄稼汉 怎成了中兴之主？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/11/n10555144.md#1">三箭定天山 薛仁贵的不朽传奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14434860.md#1">这些茶的雅号您知道吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/19/n14334216.md#1">【古道人生】谁杀了富家女？ 远逃二千里 躲过初一躲不过十五！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/17/n14438821.md#1">【未解之谜】皮行者牧场（三）：发现神秘高空辐射 飞碟充电站？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/22/n14443379.md#1">【菁英论坛】北京大妈与全球央行“争抢黄金”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/23/n14443971.md#1">【唐青看时事】川普下什么棋？小泽激怒川普</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/22/n14443344.md#1">【军事情报局】乌克兰F16 装备响尾蛇AIM-9X</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/20/n14441186.md#1">90%家庭在这方面浪费太多钱 你也是如此吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/21/n14442781.md#1">波音CEO赞马斯克天才 助解决空军一号交付难题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/22/n14442901.md#1">中共军委一天发三军规 分析：军中暗流涌动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/20/n14441891.md#1">刘诗诗低调转让股权给吴奇隆 引发传言和猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/22/n14443410.md#1">曾获中共央视吹捧 《难哄》因剧情低俗遭抵制</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/20/n14441991.md#1">胡歌被传罹癌 工作室辟谣 粉丝却为一事不满</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/22/n14443431.md#1">大陆女星蒋欣自曝又瘦15斤 不婚原因引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/20/n14442019.md#1">克雷格辞演DC英雄片《洛克中士》 原因曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/23/n14443730.md#1">厨房海绵的细菌多如粪便 专家：改用另一物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/10/n14434122.md#1">用前所未有的方式观察大脑：最详细人脑图</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/21/n14442432.md#1">70年前美国空姐应征条件曝光 逾半与外貌相关</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/16/n14438071.md#1">睡前伸展五式 解除腰酸背痛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/21/n14442744.md#1">2025临床试验趋势 患者参与须询问的问题</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/20/n13977420.htm">16年照顾14位寄养童 林进财伉俪 获全国绩优寄养家庭</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/4/20/n13977420.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
